Removed old vh property to fix slider overlapping bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .grid {
-    margin: 10em 7em 0 7em; } }
+    margin: 0 7em 0 7em; } }
 
 * {
   font-family: 'Open Sans', sans-serif; }
@@ -165,9 +165,6 @@ p {
 
 h2 {
   margin: 0 0.3em; }
-
-header {
-  height: 100vh; }
 
 @media screen and (min-width: 1024px) {
   header {
