--- a/sass/header/header.sass
+++ b/sass/header/header.sass
@@ -3,7 +3,7 @@ header
 	// #jssor_1
 	// 	height: 100vh
 	// 	background-color: lightgrey
-	height: 100vh
+	// height: 100vh
 	// width: 100vw
 
 // 	#bg-container
